<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PetDetail">

    <Button
        android:id="@+id/GoBack_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="ReturnToMain"
        android:text="@string/BackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/petIcon_imageView"
        android:layout_width="249dp"
        android:layout_height="258dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GoBack_Button"
        app:layout_constraintVertical_bias="0.124"
        app:srcCompat="@drawable/cattie" />

    <LinearLayout
        android:layout_width="255dp"
        android:layout_height="369dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petIcon_imageView">

        <TextView
            android:id="@+id/petName_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catName"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Animal_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cats_display" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Age_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Age" />

            <TextView
                android:id="@+id/petAge_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/catAge"
                android:textSize="14sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/distanceAway_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:scaleX="0.8"
                android:scaleY="0.8"
                app:srcCompat="@drawable/pawprint" />

            <TextView
                android:id="@+id/petDistance_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/catDistance"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/ASPCA_Link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:onClick="GoToWebpage"
            android:text="@string/ASPCA"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>