<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PetDogCard_ConstraintView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/petInfoCard_ContainerHeight"
    android:forceHasOverlappingRendering="true">


    <View
        android:id="@+id/petcardBG_cat_view"
        android:layout_width="0dp"
        android:layout_height="98dp"
        android:layout_marginEnd="8dp"
        android:background="@color/off_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/petIcon_cat_imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/petIcon_cat_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:srcCompat="@tools:sample/avatars" />

    <CheckBox
        android:id="@+id/likePet_cat_toggleButton"
        android:layout_width="58dp"
        android:layout_height="57dp"
        android:button="@drawable/heart_fill"
        app:layout_constraintEnd_toEndOf="@+id/petcardBG_cat_view"
        app:layout_constraintTop_toTopOf="@+id/petcardBG_cat_view" />

    <TextView
        android:id="@+id/petName_cat_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/petName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/petcardBG_cat_view"
        app:layout_constraintTop_toTopOf="@+id/petcardBG_cat_view" />

    <TextView
        android:id="@+id/petAge_cat_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/petAge"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/petcardBG_cat_view"
        app:layout_constraintTop_toBottomOf="@+id/petName_cat_textView" />

    <ImageView
        android:id="@+id/distanceAway_cat_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:alpha="0.5"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintStart_toStartOf="@+id/petcardBG_cat_view"
        app:layout_constraintTop_toBottomOf="@+id/petAge_cat_textView"
        tools:srcCompat="@drawable/pawprint" />

    <TextView
        android:id="@+id/petDistance_cat_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:text="@string/petDistance"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/distanceAway_cat_imageView"
        app:layout_constraintTop_toBottomOf="@+id/petAge_cat_textView" />


</androidx.constraintlayout.widget.ConstraintLayout>